--- a/db_settings.json
+++ b/db_settings.json
@@ -1,15 +1,13 @@
 {
-    "active_db": 9,
+    "active_db": 1,
     "databases": {
-        "9": {
+        "1": {
             "ENGINE": "django.db.backends.postgresql",
-            "HOST": "localhost",
-            "NAME": "zakee",
-            "PORT": "5432",
+            "NAME": "crm_system",
             "USER": "postgres",
-            "_ERROR": "\u0641\u0634\u0644 \u0625\u0646\u0634\u0627\u0621 \u0642\u0627\u0639\u062f\u0629 \u0627\u0644\u0628\u064a\u0627\u0646\u0627\u062a: ERROR:  database \"zakee\" already exists\r\n",
             "PASSWORD": "5525",
-            "_CREATED": false
+            "HOST": "localhost",
+            "PORT": "5432"
         }
     }
 }
