إضافة ميزة Google Sync ومدير قواعد البيانات مع تحسينات النظام

--- a/db_settings.json
+++ b/db_settings.json
@@ -1,13 +1,13 @@
 {
-    "active_db": 13,
+    "active_db": 2,
     "databases": {
-        "13": {
+        "2": {
             "ENGINE": "django.db.backends.postgresql",
             "NAME": "crm_system",
-            "USER": "postgres",
-            "PASSWORD": "5525",
+            "USER": "admin",
+            "PASSWORD": "admin123",
             "HOST": "localhost",
-            "PORT": "5432"
+            "PORT": "5433"
         }
     }
 }
