--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-# تم تحديث هذا الملف تلقائياً بواسطة نظام إدارة قواعد البيانات في 2025-05-30 12:32:14
+# تم تحديث هذا الملف تلقائياً بواسطة نظام إدارة قواعد البيانات في 2025-05-31 16:59:00
 # قاعدة البيانات النشطة: crm_system (crm_system)
 
 DEBUG=True
 SECRET_KEY=your-secret-key
-DATABASE_URL=postgres://admin:admin123@localhost:5433/crm_system
+DATABASE_URL=postgres://postgres:5525@localhost:5432/crm_system
 DB_NAME=crm_system
-DB_USER=admin
-DB_PASSWORD=admin123
+DB_USER=postgres
+DB_PASSWORD=5525
 DB_HOST=localhost
-DB_PORT=5433
-PGPASSWORD=admin123
+DB_PORT=5432
+PGPASSWORD=5525
 ALLOWED_HOSTS=localhost,127.0.0.1
 REDIS_URL=redis://localhost:6379/0
 CORS_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
