--- a/db_settings.json
+++ b/db_settings.json
@@ -1,13 +1,13 @@
 {
-    "active_db": 2,
+    "active_db": 13,
     "databases": {
-        "2": {
+        "13": {
             "ENGINE": "django.db.backends.postgresql",
             "NAME": "crm_system",
-            "USER": "admin",
-            "PASSWORD": "admin123",
+            "USER": "postgres",
+            "PASSWORD": "5525",
             "HOST": "localhost",
-            "PORT": "5433"
+            "PORT": "5432"
         }
     }
 }
