--- a/.env.backup.1750499536
+++ b/.env.backup.1750499536
@@ -1,5 +1,5 @@
-# تم تحديث هذا الملف تلقائياً بواسطة نظام إدارة قواعد البيانات في 2025-06-17 15:26:31
-# قاعدة البيانات النشطة: zakee (zakee)
+# Environment variables for HomeUpdate CRM System
+# Database Configuration
 
 DEBUG=True
 SECRET_KEY=django-insecure-your-secret-key-here
