--- a/db_settings.json
+++ b/db_settings.json
@@ -1,13 +1,13 @@
 {
-    "active_db": 2,
+    "active_db": 4,
     "databases": {
-        "2": {
+        "4": {
             "ENGINE": "django.db.backends.postgresql",
-            "NAME": "crm_system",
-            "USER": "postgres",
-            "PASSWORD": "5525",
             "HOST": "localhost",
-            "PORT": "5432"
+            "NAME": "testdb",
+            "PORT": "5432",
+            "USER": "postgres",
+            "PASSWORD": "5525"
         }
     }
 }
