--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,7 @@ python-decouple==3.8
 google-auth==2.39.0
 google-auth-oauthlib==1.2.2
 google-api-core==2.25.0
+google-api-python-client==2.156.0
 googleapis-common-protos==1.70.0
 
 # ======================================
