--- a/db_settings.json
+++ b/db_settings.json
@@ -1,13 +1,13 @@
 {
-    "active_db": 4,
+    "active_db": 3,
     "databases": {
-        "4": {
+        "3": {
             "ENGINE": "django.db.backends.postgresql",
-            "HOST": "localhost",
             "NAME": "crm_system",
-            "PORT": "5432",
             "USER": "postgres",
-            "PASSWORD": "5525"
+            "PASSWORD": "5525",
+            "HOST": "localhost",
+            "PORT": "5432"
         }
     }
 }
