تحديث ملف المتطلبات بإضافة المكتبات الناقصة

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # ======================================
-# Core Framework & Extensions
+# إطار العمل الأساسي والإضافات
 # ======================================
 Django==4.2.21
 django-environ==0.12.0
@@ -8,6 +8,12 @@ django-extensions==3.2.3
 django-apscheduler==0.8.0
 django-dbbackup==4.2.1
 python-dotenv==1.0.1
+
+# ======================================
+# معالجة المهام المجدولة
+# ======================================
+django-celery-beat==4.0.0
+django-celery-results==3.1.4
 
 # REST Framework & API
 djangorestframework==3.14.0
@@ -88,14 +94,16 @@ seaborn==0.13.2
 scipy==1.15.3
 
 # ======================================
-# Development & Testing
+# التطوير والاختبار
 # ======================================
 pytest==7.4.3
 pytest-django==4.5.2
+pytest-cov==4.1.0  # لتغطية الكود بالاختبارات
 gunicorn==21.2.0
 whitenoise==6.5.0
 Markdown==3.8
 python-slugify==8.0.4
+factory-boy==3.3.0  # لإنشاء بيانات وهمية للاختبارات
 
 # System Monitoring
 psutil==7.0.0
@@ -119,7 +127,9 @@ certifi==2025.4.26
 chardet==5.2.0
 idna==3.10
 
-# Additional Utilities
+# ======================================
+# أدوات مساعدة إضافية
+# ======================================
 click==8.2.1
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -131,7 +141,22 @@ MarkupSafe==3.0.2
 Pygments==2.19.1
 wcwidth==0.2.13
 
-# Low Level Dependencies
+# ======================================
+# أدوات التطوير
+# ======================================
+ipython==8.25.0  # واجهة برمجة تفاعلية متقدمة
+django-extensions==3.2.3  # أدوات إضافية لدجانجو
+django-debug-toolbar==4.2.0  # شريط تصحيح لتطوير الويب
+
+# ======================================
+# الأمان
+# ======================================
+django-csp==3.7  # سياسة أمان المحتوى
+python-json-logger==2.0.7  # تسجيل السجلات بتنسيق JSON
+
+# ======================================
+# التبعيات منخفضة المستوى
+# ======================================
 cachetools==5.5.2
 cffi==1.17.1
 charset-normalizer==3.4.2
