--- a/requirements.txt
+++ b/requirements.txt
@@ -8,38 +8,42 @@ django-extensions==3.2.3
 django-apscheduler==0.7.0
 django-dbbackup==4.2.1
 python-dotenv==1.0.1
+gunicorn==21.2.0
+whitenoise==6.5.0
+asgiref==3.8.1
 
 # ======================================
-# معالجة المهام المجدولة
-# ======================================
-django-celery-beat==2.8.1
-django-celery-results==2.6.0
-
 # REST Framework & API
+# ======================================
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 django-cors-headers==4.3.1
-django-rest-framework==0.1.0
 coreapi==2.3.3
 uritemplate==4.2.0
 
+# ======================================
 # Forms & UI
+# ======================================
 django-widget-tweaks==1.5.0
 django-crispy-forms==2.4
 django-filter==25.1
 django-js-asset==3.1.2
+django-mptt==0.17.0
 
+# ======================================
 # Authentication & Users
+# ======================================
 django-allauth==65.9.0
 PyJWT==2.9.0
 oauthlib==3.2.2
 
+# ======================================
 # Database & Models
-psycopg2==2.9.10
+# ======================================
 psycopg2-binary==2.9.10
 dj-database-url==3.0.0
 django-model-utils==5.0.0
-django-mptt==0.17.0
+sqlparse==0.5.3
 
 # ======================================
 # File Handling & Media
@@ -48,7 +52,9 @@ Pillow==11.2.1
 python-magic==0.4.27
 reportlab==4.4.1
 
+# ======================================
 # Import/Export Support
+# ======================================
 django-import-export==3.3.1
 openpyxl==3.1.5
 xlrd==2.0.1
@@ -62,21 +68,24 @@ tablib==3.5.0
 celery==5.5.3
 redis==6.2.0
 APScheduler==3.11.0
-
-# Celery Dependencies
+django-celery-beat==2.8.1
+django-celery-results==2.6.0
 amqp==5.3.1
 billiard==4.2.1
 kombu==5.5.4
 vine==5.1.0
 
 # ======================================
-# Security & Authentication
+# Security
 # ======================================
 cryptography==41.0.1
 defusedxml==0.7.1
 python-decouple==3.8
+django-csp==3.7
 
+# ======================================
 # Google Integration
+# ======================================
 google-auth==2.39.0
 google-auth-oauthlib==1.2.2
 google-api-core==2.25.0
@@ -98,15 +107,15 @@ scipy==1.15.3
 # ======================================
 pytest==7.4.3
 pytest-django==4.5.2
-pytest-cov==4.1.0  # لتغطية الكود بالاختبارات
-gunicorn==21.2.0
-whitenoise==6.5.0
-Markdown==3.8
-python-slugify==8.0.4
-factory-boy==3.3.0  # لإنشاء بيانات وهمية للاختبارات
+pytest-cov==4.1.0
+factory-boy==3.3.0
+ipython==8.25.0
 
-# System Monitoring
+# ======================================
+# System Monitoring & Logging
+# ======================================
 psutil==7.0.0
+python-json-logger==2.0.7
 
 # ======================================
 # Dependencies & Utilities
@@ -116,9 +125,8 @@ diff-match-patch==20241021
 text-unidecode==1.3
 setuptools==80.0.0
 six==1.17.0
-sqlparse==0.5.3
-
-# HTTP & Networking
+Markdown==3.8
+python-slugify==8.0.4
 requests==2.32.3
 requests-oauthlib==2.0.0
 urllib3==2.4.0
@@ -126,10 +134,6 @@ httplib2==0.22.0
 certifi==2025.4.26
 chardet==5.2.0
 idna==3.10
-
-# ======================================
-# أدوات مساعدة إضافية
-# ======================================
 click==8.2.1
 click-didyoumean==0.3.0
 click-plugins==1.1.1
@@ -140,23 +144,6 @@ MarkupPy==1.18
 MarkupSafe==3.0.2
 Pygments==2.19.1
 wcwidth==0.2.13
-
-# ======================================
-# أدوات التطوير
-# ======================================
-ipython==8.25.0  # واجهة برمجة تفاعلية متقدمة
-django-extensions==3.2.3  # أدوات إضافية لدجانجو
-django-debug-toolbar==4.2.0  # شريط تصحيح لتطوير الويب
-
-# ======================================
-# الأمان
-# ======================================
-django-csp==3.7  # سياسة أمان المحتوى
-python-json-logger==2.0.7  # تسجيل السجلات بتنسيق JSON
-
-# ======================================
-# التبعيات منخفضة المستوى
-# ======================================
 cachetools==5.5.2
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -179,12 +166,6 @@ threadpoolctl==3.6.0
 typing_extensions==4.14.0
 tzdata==2025.2
 tzlocal==5.3.1
-
-# حزم مضافة تلقائياً في 2025-06-19 15:32:48
-django-apscheduler==0.7.0
-django-dbbackup==4.2.1
-python-dotenv==1.0.1
-asgiref==3.8.1
 coreschema==0.0.4
 cycler==0.12.1
 iniconfig==2.1.0
