--- a/db_settings.json
+++ b/db_settings.json
@@ -1,4 +1,13 @@
 {
-    "active_db": null,
-    "databases": {}
+    "active_db": 1,
+    "databases": {
+        "1": {
+            "ENGINE": "django.db.backends.postgresql",
+            "NAME": "crm_system",
+            "USER": "postgres",
+            "PASSWORD": "5525",
+            "HOST": "localhost",
+            "PORT": "5432"
+        }
+    }
 }
