🚀 رفع جميع التحديثات المتبقية - تحسينات النظام الشاملة
📋 التحديثات المرفوعة:
✅ تحسين عرض أسماء العملاء بالخط العريض
✅ إضافة اسم المستلم في تفاصيل التسليم
✅ تحسين عرض حالة المعاينة في جدول الطلبات
✅ إضافة حالة التركيب في تفاصيل الطلب
✅ إصلاحات في قسم التصنيع والتصنيع VIP
✅ تحسينات في نظام المعاينات والتركيبات
✅ تحديث ملفات الهجرة للطلبات
✅ إضافة ملفات CSS موحدة للحالات
✅ تحسينات في التقارير والواجهات

🎨 الألوان الموحدة:
🟢 أخضر: الحالات المكتملة
🟠 برتقالي: حالات قيد الانتظار
⚪ فضي: حالات غير مجدول
🔵 أزرق فاتح: حالات مجدولة
🔴 أحمر: حالات ملغية

📁 الملفات المضافة: 50+ ملف
📝 الملفات المحدثة: 25+ ملف

--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ sqlparse==0.5.3
 Pillow==11.2.1
 python-magic==0.4.27
 reportlab==4.4.1
+WeasyPrint==65.1
 
 # ======================================
 # Import/Export Support
