اصلاح صفحة انشاء النسخه ويجب حذف النظام القديم للنسخ وانشاء نظام شامل لقاعدة البيانات

--- a/db_settings.json
+++ b/db_settings.json
@@ -1,13 +1,13 @@
 {
-    "active_db": 1,
+    "active_db": 3,
     "databases": {
-        "1": {
+        "3": {
             "ENGINE": "django.db.backends.postgresql",
-            "NAME": "crm_system",
-            "USER": "postgres",
-            "PASSWORD": "5525",
             "HOST": "localhost",
-            "PORT": "5432"
+            "NAME": "crm_system",
+            "PORT": "5432",
+            "USER": "postgres",
+            "PASSWORD": "5525"
         }
     }
 }
