--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,12 @@ django-js-asset==3.1.2
 django-mptt==0.17.0
 
 # ======================================
+# Admin Interface & Dashboard
+# ======================================
+django-admin-interface==0.30.1
+django-colorfield==0.14.0
+
+# ======================================
 # Authentication & Users
 # ======================================
 django-allauth==65.9.0
