✨ إضافة نظام تتبع نشاط المستخدمين المتقدم
🎯 الميزات الجديدة:
- إنشاء تطبيق user_activity منفصل لإدارة نشاط المستخدمين
- زر عائم قابل للسحب لعرض المستخدمين النشطين
- شريط جانبي تفاعلي مع تفاصيل المستخدمين النشطين
- تسجيل شامل لجميع أنشطة المستخدمين
- سجلات تسجيل الدخول والخروج
- تتبع الجلسات النشطة
- لوحة إدارة منفصلة لنشاط المستخدمين

🔧 التحسينات:
- حذف النماذج المكررة من تطبيق accounts
- تنظيم أفضل للكود مع فصل الاهتمامات
- واجهة مستخدم محسنة مع تأثيرات بصرية
- API محسن للمستخدمين النشطين
- إشارات Django لتسجيل الأنشطة تلقائياً

🗂️ الملفات الجديدة:
- user_activity/ - تطبيق منفصل لنشاط المستخدمين
- templates/includes/online_users_sidebar.html - الشريط الجانبي
- accounts/activity_views.py - عروض API للنشاط
- accounts/admin_config.py - إعدادات لوحة الإدارة

🔄 التغييرات:
- تحديث settings.py لإضافة التطبيق الجديد
- تحسين middleware لتتبع النشاط
- إضافة إشارات تسجيل الدخول/الخروج
- تحديث قوالب HTML للواجهة الجديدة

--- a/requirements.txt
+++ b/requirements.txt
@@ -123,6 +123,7 @@ ipython==8.25.0
 # ======================================
 psutil==7.0.0
 python-json-logger==2.0.7
+user-agents==2.2.0
 
 # ======================================
 # Dependencies & Utilities
