--- a/requirements.txt
+++ b/requirements.txt
@@ -95,6 +95,7 @@ tablib==3.5.0
 # Task Processing & Caching
 celery>=5.5.3
 redis>=6.2.0
+django-redis>=5.4.0
 APScheduler==3.11.0
 django-celery-beat==2.8.1
 django-celery-results==2.6.0
