🚀 تحسينات شاملة للنظام: إصلاح مشاكل التحديث المجمع وتحسين الأداء
✨ الميزات الجديدة:
- إصلاح مشكلة التحديث المجمع في أوامر التصنيع
- تحديث تلقائي لحالة التركيب عند تغيير حالة التصنيع
- إضافة عمود حالة التركيب في لوحة التحكم
- تحسين إعدادات الملفات الكبيرة (1GB support)
- تحسين إعدادات Cloudflare Tunnel للعمليات الطويلة
- إضافة نظام مراقبة العمليات الكبيرة

🔧 الإصلاحات:
- إصلاح مشكلة عدم تحديث البيانات في لوحة التحكم بعد التحديث المجمع
- تحسين إعدادات PostgreSQL timeout
- إصلاح إعدادات Celery للمهام الطويلة (60 دقيقة)
- تحسين معالجة cache وإعادة التحميل

📈 تحسينات الأداء:
- زيادة حدود الملفات إلى 1GB
- تحسين timeout للعمليات الكبيرة
- تحسين إعدادات قاعدة البيانات
- تحسين استعلامات Django Admin

🛠️ أدوات جديدة:
- test_status_update.py: اختبار تحديث الحالات
- monitor_large_operations.py: مراقبة العمليات الكبيرة
- upload_sync_config.py: إعدادات الرفع والمزامنة
- fix_pending_inspections.py: إصلاح المعاينات المعلقة

--- a/cloudflared.yml
+++ b/cloudflared.yml
@@ -12,55 +12,65 @@ ingress:
     service: http://localhost:8000
     originRequest:
       httpHostHeader: elkhawaga.uk
-      connectTimeout: 30s
-      tlsTimeout: 10s
-      tcpKeepAlive: 30s
-      keepAliveConnections: 100
-      keepAliveTimeout: 90s
+      connectTimeout: 60s
+      tlsTimeout: 30s
+      tcpKeepAlive: 60s
+      keepAliveConnections: 200
+      keepAliveTimeout: 300s
+      noHappyEyeballs: false
+      disableChunkedEncoding: false
 
   # WWW subdomain - also routes to Django CRM application
   - hostname: www.elkhawaga.uk
     service: http://localhost:8000
     originRequest:
       httpHostHeader: www.elkhawaga.uk
-      connectTimeout: 30s
-      tlsTimeout: 10s
-      tcpKeepAlive: 30s
-      keepAliveConnections: 100
-      keepAliveTimeout: 90s
+      connectTimeout: 60s
+      tlsTimeout: 30s
+      tcpKeepAlive: 60s
+      keepAliveConnections: 200
+      keepAliveTimeout: 300s
+      noHappyEyeballs: false
+      disableChunkedEncoding: false
 
   # CRM subdomain - dedicated CRM access
   - hostname: crm.elkhawaga.uk
     service: http://localhost:8000
     originRequest:
       httpHostHeader: crm.elkhawaga.uk
-      connectTimeout: 30s
-      tlsTimeout: 10s
-      tcpKeepAlive: 30s
-      keepAliveConnections: 100
-      keepAliveTimeout: 90s
+      connectTimeout: 60s
+      tlsTimeout: 30s
+      tcpKeepAlive: 60s
+      keepAliveConnections: 200
+      keepAliveTimeout: 300s
+      noHappyEyeballs: false
+      disableChunkedEncoding: false
 
   # API subdomain - for API access
   - hostname: api.elkhawaga.uk
     service: http://localhost:8000
     originRequest:
       httpHostHeader: api.elkhawaga.uk
-      connectTimeout: 30s
-      tlsTimeout: 10s
-      tcpKeepAlive: 30s
-      keepAliveConnections: 100
-      keepAliveTimeout: 90s
+      connectTimeout: 60s
+      tlsTimeout: 30s
+      tcpKeepAlive: 60s
+      keepAliveConnections: 200
+      keepAliveTimeout: 300s
+      noHappyEyeballs: false
+      disableChunkedEncoding: false
 
   # Admin subdomain - for admin panel
   - hostname: admin.elkhawaga.uk
     service: http://localhost:8000
     originRequest:
       httpHostHeader: admin.elkhawaga.uk
-      connectTimeout: 30s
-      tlsTimeout: 10s
-      tcpKeepAlive: 30s
-      keepAliveConnections: 100
-      keepAliveTimeout: 90s
+      connectTimeout: 60s
+      tlsTimeout: 30s
+      tcpKeepAlive: 60s
+      keepAliveConnections: 200
+      keepAliveTimeout: 300s
+      noHappyEyeballs: false
+      disableChunkedEncoding: false
 
   # Catch-all rule - returns 404 for unmatched hostnames
   - service: http_status:404
