🔧 إصلاح شامل لنظام الدردشة والإشعارات
✅ الإصلاحات المطبقة:
- إصلاح فتح المحادثات تلقائياً عند وصول رسائل جديدة
- حل مشكلة الأصوات المكررة وتوحيد نظام الكتم
- إصلاح تحديث حالة المستخدمين النشطين
- حل مشكلة عدم وصول الرسائل في الوقت الفعلي
- إصلاح تحديث قائمة المستخدمين عند حذف المحادثات
- تنظيف الكود وإزالة التكرارات والتضارب

🎯 التحسينات:
- توحيد نظام WebSocket في ChatManager
- نظام كتم محسن للمحادثات الفردية
- تحديثات فورية عبر WebSocket بدلاً من التحديث الدوري
- إزالة النظام القديم المتضارب
- إضافة ملفات اختبار شاملة

📁 الملفات الجديدة:
- ملفات اختبار النظام المحدث
- ملفات توثيق الإصلاحات
- سكريبت إنشاء الأصوات
- ملفات تشغيل الخادم المحسنة

🔊 نظام الصوت:
- أصوات WAV محسنة للإشعارات
- نظام كتم يعمل بشكل صحيح
- إزالة الأصوات المكررة من ملفات أخرى

⚡ الأداء:
- تقليل التحديثات الدورية المتضاربة
- تحسين استهلاك الذاكرة
- تقليل طلبات الشبكة غير الضرورية

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ django-apscheduler==0.7.0
 django-dbbackup==4.2.1
 python-dotenv==1.0.1
 gunicorn==21.2.0
+daphne==4.1.2
+channels==4.1.0
+channels-redis==4.2.0
 whitenoise==6.5.0
 asgiref==3.8.1
 
