إصلاح مشاكل Cloudflare Tunnel وتحسينات النظام
- إضافة شهادة SSL للـ origin certificate (cert.pem)
- تحديث cloudflared.yml لتشمل origincert
- إصلاح سكريبت run-production.sh لاستخدام --config في إعادة التشغيل
- إضافة سكريبت fix_status_conflicts.py لإصلاح تعارضات الحالة
- تحديثات على installations/views.py
- إضافة تقارير باللغة العربية للتعديلات والفحوصات

--- a/cloudflared.yml
+++ b/cloudflared.yml
@@ -4,6 +4,7 @@
 # Tunnel configuration (will be updated after tunnel creation)
 tunnel: 02d18311-1c6a-479a-a4c2-cc5750fb846e
 credentials-file: ./cloudflare-credentials.json
+origincert: ./cert.pem
 
 # Ingress rules - defines how traffic is routed
 ingress:
