--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,8 @@
 # ======================================
+# ملف متطلبات بايثون - نظام إدارة الشكاوى والعملاء
+# ======================================
+
 # إطار العمل الأساسي والإضافات
-# ======================================
-Django==4.2.21
-django-environ==0.12.0
-django-debug-toolbar==4.2.0
-django-extensions==3.2.3
-django-apscheduler==0.7.0
-django-dbbackup==4.2.1
-python-dotenv==1.0.1
-gunicorn==21.2.0
-daphne==4.1.2
-channels==4.1.0
-channels-redis==4.2.0
-whitenoise==6.5.0
-asgiref==3.8.1
-
-# ======================================
-# REST Framework & API
-# ======================================
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-django-cors-headers==4.3.1
-coreapi==2.3.3
-uritemplate==4.2.0
-
-# ======================================
-# Forms & UI
-# ======================================
-django-widget-tweaks==1.5.0
-django-crispy-forms==2.4
-django-filter==25.1
-django-js-asset==3.1.2
-django-mptt==0.17.0
-
-# ======================================
-# Admin Interface & Dashboard
-# ======================================
-django-admin-interface==0.30.1
-
-# ملف متطلبات بايثون - منقح بدون تكرار أو تضارب
-# احتفظ بأحدث شرط إصدار لكل مكتبة
-
 Django>=4.2.21
 django-environ==0.12.0
 django-debug-toolbar>=4.2.0
