إصلاح مشاكل حساب الأسعار والخصومات في الطلبات
- إصلاح حساب المبلغ المتبقي ليتم من الإجمالي النهائي بعد الخصم
- تحديث قالب فاتورة الطباعة لعرض السعر الصحيح بعد الخصم
- إضافة نظام تتبع التعديلات اليدوية للطلبات
- تحسين عرض تفاصيل الطلبات والدفعات
- إصلاح مشاكل في نماذج التركيب والإشعارات
- تحديث متطلبات النظام

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,175 +1,202 @@
 # ======================================
 # ملف متطلبات بايثون - نظام إدارة الشكاوى والعملاء
 # ======================================
+# تم تحديثه تلقائياً باستخدام pip freeze ليشمل جميع الحزم المثبتة
 
-# إطار العمل الأساسي والإضافات
-Django>=4.2.21
-django-environ==0.12.0
-django-debug-toolbar>=4.2.0
-django-extensions==3.2.3
-django-apscheduler==0.7.0
-django-dbbackup==4.2.1
-python-dotenv==1.0.1
-gunicorn==21.2.0
-whitenoise==6.5.0
-asgiref==3.8.1
-
-# REST Framework & API
-djangorestframework>=3.14.0
-djangorestframework-simplejwt==5.2.2
-django-cors-headers>=4.3.1
-coreapi==2.3.3
-uritemplate==4.2.0
-
-# Forms & UI
-django-widget-tweaks==1.5.0
-django-crispy-forms>=2.4
-django-filter>=25.1
-django-js-asset==3.1.2
-django-mptt==0.17.0
-
-# Admin Interface & Dashboard
-django-admin-interface==0.30.1
-django-colorfield==0.14.0
-
-# Authentication & Users
-django-allauth==65.9.0
-PyJWT==2.9.0
-oauthlib==3.2.2
-
-# Database & Models
-psycopg2-binary>=2.9.10
-dj-database-url==3.0.0
-django-model-utils==5.0.0
-sqlparse==0.5.3
-
-# File Handling & Media
-Pillow>=11.2.1
-python-magic>=0.4.27
-reportlab>=4.4.1
-WeasyPrint>=65.1
-
-# Import/Export Support
-django-import-export>=3.3.1
-openpyxl>=3.1.5
-xlrd==2.0.1
-xlwt==1.3.0
-odfpy==1.4.1
-tablib==3.5.0
-
-# Task Processing & Caching
-celery>=5.5.3
-redis>=6.2.0
-django-redis>=5.4.0
-APScheduler==3.11.0
-django-celery-beat==2.8.1
-django-celery-results==2.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiohttp-retry==2.9.1
+aiosignal==1.4.0
 amqp==5.3.1
+APScheduler==3.11.0
+arabic-reshaper==3.0.0
+asgiref==3.9.1
+asn1crypto==1.5.1
+asttokens==3.0.0
+attrs==25.3.0
 billiard==4.2.1
-kombu==5.5.4
-vine==5.1.0
-
-# Security
-cryptography>=41.0.1
-defusedxml==0.7.1
-python-decouple==3.8
-django-csp==3.7
-
-# Google Integration
-google-auth==2.39.0
-google-auth-oauthlib==1.2.2
-google-api-core==2.25.0
-google-api-python-client==2.156.0
-googleapis-common-protos==1.70.0
-
-# Data Processing & Visualization
-numpy==2.2.6
-pandas==2.2.3
-scikit-learn==1.6.1
-matplotlib>=3.10.3
-seaborn>=0.13.2
-scipy==1.15.3
-
-# التطوير والاختبار
-pytest>=7.4.3
-pytest-django>=4.5.2
-pytest-cov==4.1.0
-factory-boy>=3.3.0
-ipython==8.25.0
-coverage>=6.0.0
-
-# System Monitoring & Logging
-psutil==7.0.0
-python-json-logger==2.0.7
-user-agents==2.2.0
-
-# Dependencies & Utilities
-python-dateutil>=2.9.0.post0
-diff-match-patch==20241021
-text-unidecode==1.3
-setuptools==80.0.0
-six==1.17.0
-Markdown==3.8
-python-slugify==8.0.4
-requests>=2.32.3
-requests-oauthlib==2.0.0
-urllib3==2.4.0
-httplib2==0.22.0
+black==25.9.0
+Brotli==1.1.0
+cachetools==5.5.2
+cairocffi==1.7.1
+celery==5.5.3
 certifi==2025.4.26
+cffi==2.0.0
+channels==4.3.1
 chardet==5.2.0
-idna==3.10
+charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+contourpy==1.3.2
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==7.10.6
+cron_descriptor==2.0.6
+cryptography==46.0.1
+cssselect2==0.8.0
+cycler==0.12.1
+decorator==5.2.1
+defusedxml==0.7.1
+diff-match-patch==20241021
+dj-database-url==3.0.0
+Django==5.2.6
+django-admin-interface==0.30.1
+django-allauth==65.9.0
+django-apscheduler==0.7.0
+django-cacheops==7.2
+django-celery-beat==2.8.1
+django-colorfield==0.14.0
+django-cors-headers==4.9.0
+django-crispy-forms==2.4
+django-csp==3.7
+django-dbbackup==4.2.1
+django-debug-toolbar==6.0.0
+django-environ==0.12.0
+django-extensions==3.2.3
+django-filter==25.1
+django-haystack==3.3.0
+django-import-export==4.1.1
+django-js-asset==3.1.2
+django-model-utils==5.0.0
+django-mptt==0.17.0
+django-notifications-hq==1.8.3
+django-ratelimit==4.1.0
+django-redis==6.0.0
+django-tables2==2.7.5
+django-timezone-field==7.1
+django-widget-tweaks==1.5.0
+django_celery_results==2.6.0
+djangorestframework==3.16.1
+djangorestframework-simplejwt==5.2.2
+elastic-transport==9.1.0
+elasticsearch==9.1.1
+et_xmlfile==2.0.0
+executing==2.2.1
+factory_boy==3.3.3
+Faker==37.8.0
+flake8==7.3.0
+fonttools==4.58.1
+frozenlist==1.7.0
+funcy==2.0
+google-api-core==2.25.0
+google-api-python-client==2.156.0
+google-auth==2.39.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+gunicorn==21.2.0
+html5lib==1.1
+httplib2==0.22.0
+idna==3.10
+iniconfig==2.1.0
+ipython==8.25.0
+isort==6.0.1
+itypes==1.2.0
+jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.1
+jsonfield==3.2.0
+kiwisolver==1.4.8
+kombu==5.5.4
+lxml==6.0.1
+Markdown==3.8
 MarkupPy==1.18
 MarkupSafe==3.0.2
-Pygments==2.19.1
-wcwidth==0.2.13
-cachetools==5.5.2
-cffi>=1.17.1
-charset-normalizer==3.4.2
-contourpy==1.3.2
-et_xmlfile==2.0.0
-fonttools==4.58.1
-itypes==1.2.0
-joblib==1.5.1
-kiwisolver==1.4.8
+matplotlib==3.10.6
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+multidict==6.6.4
+mypy_extensions==1.1.0
+numpy==2.2.6
+oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.5
+oscrypto==1.3.0
 packaging==25.0
+pandas==2.2.3
+parso==0.8.5
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
 prompt_toolkit==3.0.51
+propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.31.1
+psutil==7.0.0
+psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.0
+pycodestyle==2.14.0
 pycparser==2.22
+pydyf==0.11.0
+pyflakes==3.4.0
+Pygments==2.19.1
+pyHanko==0.31.0
+pyhanko-certvalidator==0.29.0
+PyJWT==2.9.0
 pyparsing==3.2.3
+pypdf==6.0.0
+pyphen==0.17.2
+pytest==8.4.2
+pytest-cov==4.1.0
+pytest-django==4.11.1
+python-bidi==0.6.6
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+python-magic==0.4.27
+python-slugify==8.0.4
+pytokens==0.1.10
+pytz==2025.2
+PyYAML==6.0.2
+redis==6.4.0
+reportlab==4.4.4
+requests==2.32.5
+requests-oauthlib==2.0.0
 rsa==4.9.1
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+sentry-sdk==2.38.0
+setuptools==80.0.0
+six==1.17.0
+sqlparse==0.5.3
+stack-data==0.6.3
+svglib==1.5.1
+swapper==1.4.0
+tablib==3.5.0
+text-unidecode==1.3
 threadpoolctl==3.6.0
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+traitlets==5.14.3
+twilio==9.8.1
 typing_extensions==4.14.0
 tzdata==2025.2
 tzlocal==5.3.1
-coreschema==0.0.4
-cycler==0.12.1
-iniconfig==2.1.0
-pluggy==1.6.0
-pytz>=2025.2
-PyYAML==6.0.2
-weasyprint>=65.1
-cairocffi>=1.4.0
-xhtml2pdf>=0.2.8
-django-tables2>=2.4.0
-django-notifications-hq>=1.8.0
-reportlab>=4.4.1
-django-haystack>=3.0.0
-elasticsearch>=8.0.0
-django-ratelimit>=4.0.0
-django-cacheops>=6.0.0
-arabic-reshaper>=2.1.0
-python-bidi>=0.4.2
-twilio>=7.16.0
-sentry-sdk>=1.9.0
-black>=22.0.0
-flake8>=4.0.0
-isort>=5.10.0
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
+uritemplate==4.2.0
+uritools==5.0.0
+urllib3==2.4.0
+user-agents==2.2.0
+vine==5.1.0
+wcwidth==0.2.13
+weasyprint==66.0
+webencodings==0.5.1
+whitenoise==6.5.0
+xhtml2pdf==0.2.17
+xlrd==2.0.1
+xlsxwriter==3.2.9
+xlwt==1.3.0
+yarl==1.20.1
+zopfli==0.2.3.post1
