--- a/requirements.txt
+++ b/requirements.txt
@@ -117,13 +117,13 @@ Markdown==3.8
 markdown-it-py==3.0.0
 MarkupPy==1.18
 MarkupSafe==3.0.2
-marshmallow==3.27.0
+marshmallow>=3.20.0
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdurl==0.1.2
 multidict==6.6.4
-mypy_extensions==1.1.1
+mypy_extensions>=1.0.0
 nltk==3.9.1
 numpy==2.2.6
 oauthlib==3.2.2
@@ -184,7 +184,7 @@ rich==13.9.4
 rsa==4.9.1
 ruamel.yaml==0.18.8
 ruamel.yaml.clib==0.2.12
-safety==3.3.2
+safety>=3.0.0
 safety-schemas==0.0.10
 scikit-learn==1.6.1
 scipy==1.15.3
@@ -200,18 +200,18 @@ stevedore==5.3.0
 svglib==1.5.1
 swapper==1.4.0
 tablib==3.5.0
-tenacity==10.0.0
+tenacity>=8.0.0
 text-unidecode==1.3
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
-tomlkit==0.14.0
+tomlkit>=0.12.0
 tqdm==4.67.1
 traitlets==5.14.3
 twilio==9.8.1
 typer==0.17.0
 typing_extensions==4.14.0
-typing-inspection==0.9.0
+typing-inspection>=0.4.0
 tzdata==2025.2
 tzlocal==5.3.1
 ua-parser==1.0.1
