إصلاح تعارضات إصدارات pydantic و pydantic-core

--- a/requirements.txt
+++ b/requirements.txt
@@ -150,8 +150,8 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.0
 pycodestyle==2.14.0
 pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
+pydantic>=2.6.0,<2.10.0
+# pydantic_core - managed by pydantic
 pydyf==0.11.0
 pyflakes==3.4.0
 Pygments==2.19.1
