🔒 إصلاحات أمنية وتحسينات مهمة
✨ إصلاحات رئيسية:
- منع تغيير العميل بعد إنشاء الطلب (حماية من تداخل أرقام الطلبات)
- إصلاح توليد أوامر التصنيع (استخدام transaction.on_commit)
- إصلاح فحص تكرارات المنتجات في المخزون (استخدام running_balance)

🔐 حماية البيانات:
- منع تغيير customer_id في Order.save()
- منع تغيير العميل في الويزارد (Step1BasicInfoForm)
- تعطيل حقل Select2 بعد اختيار العميل

🐛 إصلاحات:
- إصلاح find_duplicate_products() لاستخدام set() بدلاً من distinct()
- إصلاح توليد العقود في wizard_finalize مع transaction.on_commit
- تصحيح 5 طلبات متضاربة (0.02% فقط)

📦 Migrations:
- accounting: 0004 (إزالة indexes قديمة)
- complaints: 0013 (تحسين indexes)
- installations: 0015 (تحسين indexes)
- manufacturing: 0026 (تحسين indexes)

⚙️ تحسينات أخرى:
- إضافة ملفات الخدمة إلى .gitignore
- تحسين أداء فحص التكرارات
- رسائل خطأ واضحة للمستخدمين

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,13 @@ logs/
 *.cache
 .sass-cache/
 
+# Service management files
+لينكس/start-service.sh
+لينكس/stop-service.sh
+لينكس/monitor-service.sh
+cloudflared.yml
+cloudflared
+
 # Ignore other common files
 .coverage
 htmlcov/
