🔧 إصلاح شامل لملفات الخدمة ونظام المراقبة
✨ إصلاحات رئيسية:
- إصلاح stop-service.sh: إضافة انتظار بعد kill وقتل قسري للعمليات المستعصية
- إصلاح monitor-service.sh: تنظيف العمليات القديمة قبل إعادة التشغيل
- إصلاح start-service.sh: تنظيف شامل للعمليات قبل البدء
- إضافة watch-service.sh: أداة مراقبة حية متقدمة بألوان

🔐 حل المشاكل:
- منع تكرار عمليات Celery و Gunicorn
- تحرير المنفذ 8000 قبل إعادة تشغيل Gunicorn
- إصلاح خطأ monitor_db --quiet
- تصفية رسائل Django العادية من السجلات

⚙️ تحسينات:
- استخدام pkill لتنظيف العمليات المتبقية
- استخدام lsof لتحرير المنافذ
- التحقق من نجاح إعادة التشغيل
- رسائل سجلات واضحة ومفيدة

📦 Migrations:
- accounts: 0027 (تعديل حقل العملة)

🎯 النتيجة: نظام مستقر بدون تكرار عمليات أو إعادة تشغيل متكررة

--- a/.gitignore
+++ b/.gitignore
@@ -59,9 +59,7 @@ logs/
 .sass-cache/
 
 # Service management files
-لينكس/start-service.sh
-لينكس/stop-service.sh
-لينكس/monitor-service.sh
+# ملفات الخدمة محفوظة الآن في Git بعد الإصلاحات
 cloudflared.yml
 cloudflared
 
