Feat: Complete Cloudflare QR System Integration with Premium Design
🎨 تحسينات التصميم والواجهة:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

✨ تصميم احترافي جديد لصفحة المنتج على Cloudflare Worker:
  - استخدام نظام ألوان ذهبي فاخر (Gold Theme) مع تدرجات متقدمة
  - إضافة لوغو ديناميكي مع أيقونة الماس (fas fa-gem)
  - خلفية متحركة مع تأثيرات gradient ودوائر ضوئية
  - بطاقة منتج شفافة مع Glassmorphism (backdrop-filter)
  - رسوم متحركة سلسة (fadeIn animations)
  - أيقونات Font Awesome 6.5.1 في جميع العناصر
  - خط Cairo الاحترافي بدلاً من Tajawal

🎯 التحسينات الوظيفية:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1️⃣ نظام QR Code محسّن:
   - تحديث جميع روابط QR لتوجه إلى: https://qr.elkhawaga.uk/<code>
   - دعم كلا الشكلين: /<code> و /p/<code> (للتوافق مع QR القديمة)
   - عرض الأرقام بالإنجليزية فقط (en-US format)
   - إزالة رسالة 'يعمل بدون اتصال'
   - زر 'زيارة الموقع' يحول إلى: https://elkhawaga.com

2️⃣ المزامنة التلقائية مع Cloudflare:
   - إصلاح المزامنة عند الحفظ باستخدام transaction.on_commit
   - معالجة JSON serialization للحقول lazy gettext
   - إعدادات Cloudflare في قاعدة البيانات (CloudflareSettings model)
   - تم مزامنة 8627 منتج بنجاح

3️⃣ تحديثات البنية التحتية:
   - إضافة متغيرات البيئة في .env.example:
     * CLOUDFLARE_WORKER_URL=https://qr.elkhawaga.uk
     * CLOUDFLARE_SYNC_API_KEY
     * CLOUDFLARE_SYNC_ENABLED=True
     * CLOUDFLARE_KV_NAMESPACE_ID
     * SITE_URL=https://www.elkhawaga.uk

📁 الملفات المعدلة:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1. cloudflare-worker/src/index.js
   - تصميم HTML/CSS جديد كامل مع نظام ألوان ذهبي
   - دعم /<code> مباشرة بدون /p/
   - عرض الأرقام بالإنجليزية (Intl.NumberFormat('en-US'))
   - لوغو وأيقونات Font Awesome
   - تأثيرات حركية متقدمة
   - زر يحول إلى elkhawaga.com

2. public/views.py
   - get_base_url() يستخدم CLOUDFLARE_WORKER_URL
   - QR URL بالشكل المباشر: {base_url}/{code}

3. public/cloudflare_sync.py
   - format_product() محسّنة 

--- a/.env.example
+++ b/.env.example
@@ -61,5 +61,22 @@ SECURE_SSL_REDIRECT=True
 # مستوى التسجيل (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 # LOG_LEVEL=INFO
 
+# --- Cloudflare Workers Settings ---
+# رابط Cloudflare Worker لفحص QR
+CLOUDFLARE_WORKER_URL=https://qr.elkhawaga.uk
+
+# مفتاح API للمزامنة مع Cloudflare
+CLOUDFLARE_SYNC_API_KEY=cf_66eed06368ff433b92ac3f80c950038f
+
+# تفعيل المزامنة التلقائية (True/False)
+CLOUDFLARE_SYNC_ENABLED=True
+
+# معرف KV Namespace في Cloudflare
+CLOUDFLARE_KV_NAMESPACE_ID=5dad2f4d72b246758bdafa17dfe4eb10
+
+# --- Site URL ---
+# رابط الموقع الرئيسي
+SITE_URL=https://www.elkhawaga.uk
+
 # --- Custom Settings ---
 # أي إعدادات مخصصة أخرى
