✨ Feat: Complete Bank QR Code System with Cloudflare Integration
🎯 نظام QR للحسابات البنكية - Bank Accounts QR System
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

📦 الميزات الجديدة / New Features:
─────────────────────────────────────

1️⃣ موديل BankAccount كامل:
   ✅ معلومات البنك (عربي/إنجليزي)
   ✅ رقم الحساب، IBAN، SWIFT Code
   ✅ صاحب الحساب، الفرع، العملة
   ✅ توليد QR Code تلقائي (Base64)
   ✅ حالة المزامنة مع Cloudflare
   ✅ ترتيب العرض والحساب الرئيسي

2️⃣ لوحة تحكم Admin محسّنة:
   ✅ عرض QR Code مع Modal تفاعلي (400x400px)
   ✅ معاينة صغيرة قابلة للنقر (60x60px)
   ✅ عرض معلومات الحساب كاملة
   ✅ Actions: توليد QR، مزامنة Cloudflare، PDF
   ✅ Readonly fields ذكية (Add vs Edit)
   ✅ Inline forms للحسابات المرتبطة

3️⃣ مزامنة Cloudflare Workers:
   ✅ رفع تلقائي عند الحفظ
   ✅ وضع Development (محاكاة)
   ✅ وضع Production (رفع فعلي)
   ✅ تخزين في KV: bank:CODE
   ✅ صفحة موحدة: bank:all

4️⃣ Cloudflare Worker محدث:
   ✅ صفحة /bank/<CODE>
   ✅ صفحة /bank/all (جميع الحسابات)
   ✅ تصميم احترافي مع تأثيرات
   ✅ عرض QR Code وتفاصيل الحساب
   ✅ دعم Arabic + English

5️⃣ Management Commands:
   ✅ generate_bank_qr --all
   ✅ sync_bank_accounts
   ✅ تقارير مفصلة

6️⃣ Templates و Views:
   ✅ bank_qr.html (حساب واحد)
   ✅ all_banks_qr.html (جميع الحسابات)
   ✅ تصدير PDF مع خط عربي
   ✅ QR قابل للطباعة

🔧 الإصلاحات / Fixes:
─────────────────────

✅ إصلاح حذف الأقسام التلقائي (accounts/core_departments.py)
✅ إصلاح format_html errors في Admin
✅ استخدام mark_safe للـ HTML الثابت
✅ معالجة None values في readonly fields
✅ Migration dependencies صحيحة (0005)

📁 الملفات المضافة / New Files:
──────────────────────────────

Backend:
- accounting/models.py (BankAccount model)
- accounting/migrations/0005_add_bank_accounts.py
- accounting/admin.py (BankAccountAdmin)
- accounting/views_bank.py
- accounting/urls.py (bank routes)
- accounting/cloudflare_sync.py
- accounting/management/commands/generate_bank_qr.py
- accounting/management/commands/sync_bank_accounts

--- a/.env.example
+++ b/.env.example
@@ -65,18 +65,24 @@ SECURE_SSL_REDIRECT=True
 # رابط Cloudflare Worker لفحص QR
 CLOUDFLARE_WORKER_URL=https://qr.elkhawaga.uk
 
-# مفتاح API للمزامنة مع Cloudflare
-CLOUDFLARE_SYNC_API_KEY=cf_66eed06368ff433b92ac3f80c950038f
+# معرف حساب Cloudflare
+CLOUDFLARE_ACCOUNT_ID=your-account-id-here
+
+# مفتاح API للمزامنة مع Cloudflare (Wrangler API Token)
+CLOUDFLARE_SYNC_API_KEY=your-api-token-here
 
 # تفعيل المزامنة التلقائية (True/False)
 CLOUDFLARE_SYNC_ENABLED=True
 
 # معرف KV Namespace في Cloudflare
-CLOUDFLARE_KV_NAMESPACE_ID=5dad2f4d72b246758bdafa17dfe4eb10
+CLOUDFLARE_KV_NAMESPACE_ID=your-kv-namespace-id-here
 
-# --- Site URL ---
+# --- Site Settings ---
 # رابط الموقع الرئيسي
 SITE_URL=https://www.elkhawaga.uk
+MAIN_SITE_URL=https://elkhawaga.com
+SITE_NAME=الخواجة
 
 # --- Custom Settings ---
 # أي إعدادات مخصصة أخرى
+
